<resources>
    <!--facebook-->
    <string name="facebook_app_id">252924075145357</string>
    <string name="facebook_app_id2">1382748031758385</string>
    <string name="fb_login_protocol_scheme">fb252924075145357</string>
    <!-- login -->
    <string name="login_fb">LOGIN WITH FACEBOOK</string>

    <string name="app_name">Chula Expo</string>
    <string name="tab_1">Chula Expo</string>
    <string name="tab_2">Chula Expo</string>
    <string name="tab_3">Chula Expo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Home</string>
    <string name="regis_adult_title">Adult Register</string>
    <string name="regis_student_title">Student Register</string>
    <string name="event_page_title">Events</string>
    <!--Role-->
    <string name="register_title">เลือกประเภทผู้ใช้ของคุณ</string>
    <string name="role_title">Select Your Role</string>
    <string name="role_student">STUDENT</string>
    <string name="role_adult">ADULT</string>
    <string name="interest_title">Select Your Interest</string>
    <string-array name="gender">
        <item>ชาย</item>
        <item>หญิง</item>
        <item>อื่นๆ</item>
    </string-array>

    <string-array name="academicLevel">
        <item>มัธยมต้น</item>
        <item>มัธยมปลาย</item>
        <item>ปริญญาตรี</item>
        <item>ปริญญาโท</item>
        <item>ปริญญาเอก</item>
        <item>อื่นๆ</item>
    </string-array>

    <string-array name="academicYear1">
        <item>ม.1</item>
        <item>ม.2</item>
        <item>ม.3</item>
    </string-array>
    <string-array name="academicYear2">
        <item>ม.4</item>
        <item>ม.5</item>
        <item>ม.6</item>
    </string-array>
    <string-array name="academicYear3">
        <item>ปี 1</item>
        <item>ปี 2</item>
        <item>ปี 3</item>
        <item>ปี 4</item>
        <item>ปี 5</item>
        <item>ปี 6</item>
        <item>ปี 7</item>
        <item>ปี 8</item>
    </string-array>
    <string-array name="academicYear4">
        <item>ปี 1</item>
        <item>ปี 2</item>
        <item>ปี 3</item>
        <item>ปี 4</item>
    </string-array>

    <!--Q&A-->
    <string-array name="question">
        <item>งานจุฬาฯ Expo 2017 จัดวันไหน ?</item>
        <item>งานจุฬาฯ Expo 2017 มีค่าใช้จ่ายในการเข้างานหรือเปล่า?</item>
        <item>งานจุฬาฯ Expo 2017 นี้ต้องลงทะเบียนหรือไม่?</item>
        <item>แต่งกายอย่างไรมางานจุฬาฯ Expo 2017?</item>
        <item>เดินทางมางานจุฬาฯ Expo 2017 ได้อย่างไร?</item>
        <item>งานจุฬาฯ Expo 2017 เหมือนกับงานจุฬาฯ วิชาการ หรืองาน Open House หรือไม่?</item>
    </string-array>
    <string-array name="answer">
        <item>งานนี้จัดวันที่ 15-19 มีนาคม 2560 เวลา 9.00-19.00 น. ผู้เข้าชมสามารถมาวันไหนก็ได้ เวลาไหนก็ได้ ไม่จำเป็นต้องมาทุกวัน หรือมาตั้งแต่เริ่มงาน</item>
        <item>ผู้เข้าชมสามารถมาเยี่ยมชมงานโดยไม่มีค่าใช้จ่ายในการเข้าชมใดๆทั้งสิ้น</item>
        <item>ผู้เข้าชมสามารถลงทะเบียนล่วงหน้าผ่าน application นี้ เพื่ออำนวยความสะดวกในการชมงาน หรือลงทะเบียนในงานวันจริงได้ที่บริเวณประตูหน้าพระบรมราชานุสาวรีย์ฯ นอกจากนี้บางกิจกรรมทั้งของส่วนกลาง และของคณะยังเปิดให้ลงทะเบียนล่วงหน้าผ่าน application อีกด้วย</item>
        <item>ผู้เข้าชมสามารถแต่งกายด้วยชุดสุภาพมางานได้</item>
        <item>งานนี้จัดขึ้นที่จุฬาลงกรณ์มหาวิทยาลัย นอกจากรถส่วนตัวหรือรถแท็กซี่แล้วนั้นสามารถเดินทางได้โดย\n1. รถโดยสารประจำทาง ขสมก. สามารถแบ่งเส้นทางเดินรถตามสายถนนทั้ง 4 สาย ดังนี้\n• ถนนพระราม 1 สายรถประจำทางที่ผ่านมหาวิทยาลัย ได้แก่  \n- 15, 16, 25, 40, 48, 54, 73, 73ก, 204, 501, 508(ปากน้ำ)\n- เฉพาะฝั่งสยามสแควร์: 21, 141\n- เฉพาะฝั่งสยามพารากอน: 79\n\n• ถนนพระราม 4 สายรถประจำทางที่ผ่านมหาวิทยาลัย ได้แก่\n- 4, 45, 46, 47, 50, 67, 109, 172, 177, 507, 508(เมกาบางนา)\n- เฉพาะฝั่งจามจุรี: 21, 93, 141\n\n• ถนนพญาไท สายรถประจำทางที่ผ่านมหาวิทยาลัย ได้แก่\n- 25, 29, 34, 36, 40, 47, 50, 93, 113, 172, 177, 187, 501, 508(เมกาบางนา), 529, 542\n- เฉพาะฝั่งจุฬาฯ: 21, 141\n\n• ถนนอังรีดูนังต์ สายรถประจำทางที่ผ่านมหาวิทยาลัย ได้แก่\n- 16\n- เฉพาะฝั่งจุฬาฯ: 21, 141\n\n2. รถไฟฟ้ามหานคร (MRT) ลงที่สถานีสามย่าน เมื่อใช้ทางออกหมายเลข 2 จะเจออาคารจัตุรัสจามจุรี ซึ่งน้องสามารถเดิน หรือโดยสารรถประจำทาง เพื่อความสะดวกไปยังสถานที่ต่างๆ ได้\n\n3. รถไฟฟ้าบีทีเอส (BTS) ลงที่ สถานีสยาม (Siam Station) หรือสถานีสนามกีฬาแห่งชาติ (National Stadium Station) จากนั้นสามารถใช้บริการรถโดยสารภายในจุฬาฯ โดยสามารถรอได้ที่ หน้าลิโด้ (สถานีสยาม) และสนามกีฬาแห่งชาติ\n\nเมื่อมาถึงจุฬาฯ สามารถเดินทางไปพื้นที่จัดงาน และคณะต่างๆได้ โดยดูแผนที่ผ่าน Application หรือสอบถามสตาฟฝ่ายปฏิคม (สวมเสื้อสีขาว) ที่จะคอยอำนวยความสะดวกให้</item>
        <item>งานนี้แตกต่างจากงานจุฬาฯวิชาการ และงาน Open House ตรงที่เป็นงานที่จัดแสดงนวัตกรรมและผลงานทางวิชาการอย่างบูรณาการ โดยไม่ได้แบ่งออกมาตามคณะ แต่แบ่งออกมาเป็น 3 city ได้แก่ smart city, health city และ human city นอกจากนี้ กลุ่มเป้าหมายของงานยังเปิดกว้างกว่าครั้งก่อนๆ โดยมีกลุ่มเป้าหมาย ดังนี้\n1. CU family: ครอบครัวจุฬาฯ หมายถึง ศิษย์ปัจจุบัน ศิษย์เก่า คณาจารย์และเจ้าหน้าที่ ที่มีความเกี่ยวข้องกับจุฬาฯ โดยตรง รวมทั้งนักเรียนที่มีความมุ่งหมายจะมาเป็นส่วนหนึ่งในครอบครัวจุฬาฯ ในอนาคต\n2. CU Network : บุคคลหรือองค์กรต่างๆ ที่มีความสัมพันธ์กับจุฬาลงกรณ์มหาวิทยาลัย ผ่านทางความร่วมมือรูปแบบต่างๆ\n3. CU  innovators : กลุ่มคนที่จะสามารถส่งต่อหรือต่อยอดนวัตกรรมจากผลงานในงานจุฬาฯ Expo 2017 สู่สังคมเพื่อการพัฒนาที่ดีได้อย่างยั่งยืน  เช่น กลุ่มนักลงทุน นักวิชาการ  เป็นต้น</item>
    </string-array>

    <!--Home-->
    <string name="home_stage_header_title">NOW ON STAGE</string>
    <string name="home_stage_header_desc">กิจกรรมบนเวทีขณะนี้</string>
    <string name="home_activity_header_title">RECOMMENDED EVENTS</string>
    <string name="home_activity_header_desc">แนะนำกิจกรรมที่คุณอาจสนใจ</string>

    <!--FONT-->
    <string name="font">fonts/ThaiSansNeue.ttf</string>
    <string name="font_bold">fonts/ThaiSansNeue-Bold.ttf</string>

    <!-- Map -->
    <string name="show_hide_pin">แสดง/ซ่อนหมุด</string>
    <string name="current_location">ตำแหน่งปัจจุบัน</string>
    <string name="faculty_city">คณะ/เมือง</string>
    <string name="interested_reserved">กิจกรรมของฉัน</string>
    <string name="canteen">ร้านค้า/อาหาร</string>
    <string name="regis">จุดลงทะเบียน</string>
    <string name="information">จุดประชาสัมพันธ์</string>
    <string name="toilet">ห้องน้ำ</string>
    <string name="rally">กิจกรรมแรลลี่</string>
    <string name="car_park">ที่จอดรถ</string>
    <string name="emer">จุดปฐมพยาบาล</string>
    <string name="prayer">ห้องละหมาด</string>
    <string name="bus_stop">ป้ายรถประจำทาง</string>
    <string name="bus_line">สายรถ CU Tour</string>

    <!--profile-->
    <string name="profile_age">อายุ</string>
    <string name="profile_year">ปริญญาตรี ปี</string>
    <string name="profile_gender">เพศ</string>
    <string name="profile_university">จุฬาลงกรณ์มหาวิทยาลัย</string>
    <string name="profile_button_edit">แก้ไขข้อมูลส่วนตัว</string>
    <string name="profile_button_1">Event ที่สนใจทั้งหมด</string>
    <string name="profile_button_2">Event ที่จองทั้งหมด</string>
    <string name="profile_button_3">แก้ไขเนื้อหาที่สนใจ</string>
    <string name="profile_button_4">แก้ไขคณะที่สนใจ</string>
    <string name="profile_button_5">FAQ</string>
    <string name="profile_button_6">เกี่ยวกับ จุฬาฯ Expo</string>
    <string name="profile_button_7">เกี่ยวกับแอพพลิเคชั่น</string>
    <string name="profile_button_8">ออกจากระบบ</string>

    <!--Zone main page-->
    <string name="related_event_header_text">RELATED EVENTS</string>
    <string name="Related_event_header_text_th">Events ที่เกี่ยวข้องทั้งหมด</string>

    <!--Zone ID-->
    <!--Faculty-->
    <string name="ID_eng_faculty">5899a98a5eeecd3698f6cfc6</string>
    <string name="login_user">LOGIN WITH USERNAME</string>
    <string name="login_guest">GUEST MODE</string>
    <!--City-->
    <!--Favourite&Reserved-->
    <string name="reserved_events">Reserved Events</string>
    <string name="favourite_events">Favourite Events</string>
    <string name="previous_events">PREVIOUS EVENTS</string>
    <string name="upcoming_events">UPCOMING EVENTS</string>
    <string name="previous_event_desc">Event ที่เริ่มไปแล้ว</string>
    <string name="upcoming_event_desc">Event ที่กำลังจะเกิดขึ้น</string>

    <!--Reserved Check-->
    <string name="reserved_check_prompt">คุณต้องการจอง Event</string>
    <string name="reserved_check_reserve">จอง EVENT นี้</string>
    <string name="reserved_check_line1">แอพลิเคชันจะแจ้งเตือนก่อน Event เริ่มล่วงหน้า 15 นาที</string>
    <string name="reserved_check_line2">คุณสามารถตรวจสอบ Event ที่สนใจทั้งหมดได้ใน</string>
    <string name="reserved_check_line3">เมนู</string>
    <string name="reserved_check_line4"><![CDATA[> Event ที่สนใจทั้งหมด]]></string>

</resources>
