<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#ececec"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/reserved_toolbar"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:id="@+id/reserved_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/back_black" />
        <TextView
            android:id="@+id/favourite_toolbar_title"
            fontPath="@string/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reserved_events"
            android:textColor="@color/black"
            android:textSize="@dimen/title_toolbar_size" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/header_background"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.98"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/reserved_ue_header"
                        style="@style/tvHighlightHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="-4sp"
                        android:paddingLeft="10dp"
                        android:text="@string/upcoming_events"
                        fontPath="@string/font_bold" />

                    <TextView
                        android:id="@+id/reserved_ue_desc"
                        style="@style/tvHeaderDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingTop="-3dp"
                        android:text="@string/upcoming_event_desc"
                        android:textColor="@color/white" />
                </LinearLayout>


                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_event" />
            </LinearLayout>

            <cuexpo.cuexpo2017.view.ExpandableHeightListView
                android:divider="@color/transparent"
                android:id="@+id/reserved_content_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/header_background"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.98"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/reserved_pe_header"
                        style="@style/tvHighlightHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="-4sp"
                        android:paddingLeft="10dp"
                        android:text="@string/previous_events"
                        fontPath="@string/font_bold"/>

                    <TextView
                        android:id="@+id/reserved_pe_desc"
                        style="@style/tvHeaderDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingTop="-3dp"
                        android:text="@string/previous_event_desc"
                        android:textColor="@color/white" />
                </LinearLayout>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_event" />
            </LinearLayout>

            <cuexpo.cuexpo2017.view.ExpandableHeightListView
                android:divider="@color/transparent"
                android:id="@+id/reserved_content_container2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>